# BinSleuth

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/analyzer/: entropy.rs  hardening.rs  mod.rs
src/report/: json.rs  terminal.rs
tests/: cli.rs
