[package]
name = "binsleuth"
version = "0.1.0"
edition = "2021"
description = "ELF/PE binary security hardening checker and entropy analyzer"
authors = ["BinSleuth Contributors"]

[[bin]]
name = "binsleuth"
path = "src/main.rs"

[dependencies]
object = "0.32"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
