[package]
name        = "binsleuth"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.70"

description = "ELF/PE binary security hardening checker and section-level entropy analyzer"
authors     = ["Small Long <long-910>"]
license     = "MIT"

repository    = "https://github.com/long-910/BinSleuth"
homepage      = "https://github.com/long-910/BinSleuth"
documentation = "https://docs.rs/binsleuth"
readme        = "README.md"

keywords   = ["security", "binary-analysis", "elf", "pe", "entropy"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "target/",
    ".github/",
    "*.gif",
    "*.png",
]

[[bin]]
name = "binsleuth"
path = "src/main.rs"

[dependencies]
object  = "0.32"
clap    = { version = "4.4", features = ["derive"] }
anyhow  = "1.0"
colored = "2.0"

[profile.release]
opt-level = 3
lto       = true
strip     = true
