[package]
name        = "binsleuth"
version     = "0.2.0"
edition     = "2024"
rust-version = "1.85"

description = "ELF/PE binary security hardening checker and section-level entropy analyzer"
authors     = ["Small Long <long-910>"]
license     = "MIT"

repository    = "https://github.com/long-910/BinSleuth"
homepage      = "https://github.com/long-910/BinSleuth"
documentation = "https://docs.rs/binsleuth"
readme        = "README.md"

keywords   = ["security", "binary-analysis", "elf", "pe", "entropy"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "target/",
    ".github/",
    "*.gif",
    "*.png",
    "CLAUDE.md",
]

[[bin]]
name = "binsleuth"
path = "src/main.rs"

[dependencies]
object       = { version = "0.38", default-features = false, features = ["read", "elf", "pe"] }
clap         = { version = "4.5", features = ["derive"] }
anyhow       = "1.0"
colored      = "3.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto       = true
strip     = true
